2004-06-23  Rob Crittenden <rcrittenden0569@aol.com>

	* nsd/log.c: ns_log now logs to a custom logger as well.

2004-06-22  Zoran Vasiljevic <zv@archiware.com>

	* nsd/tclxkeylist.c: added compatiblity layer for the following
	functions, since it broke some older code:
	    Tcl_GetKeyedListKeys
	    Tcl_GetKeyedListField
	    Tcl_SetKeyedListField
	    Tcl_DeleteKeyedListField

	The compatiblity layer for the string-based Tcl-API is not done.
	I will add this if requested.

2004-06-20  Zoran Vasiljevic <zv@archiware.com>

	* include/ns.h:
	* nsd/nsd.h:
	* nsd/tclcmds.c:
	* nsd/tclinit.c:
	* nsd/tclxkeylist.c: added objectified version of TclX
	  keyed-list implementation (Patch #812522).

2004-06-19  Zoran Vasiljevic <zv@archiware.com>

	* nsd/tclsock.c: Improved NsTclSockOpenObjCmd() to accept
	  two optional parameters: -localhost and -localport as
	  per patch #815889 from Vlad Seryakov.  The patch itself
	  was used as a starting point but the implementation is
	  different i.e. the command-option parsing is rewritten
	  to be much more tight than in the patch and also in the
	  previous implementation.

2004-06-14 20:28  Dossy Shiobara <dossy@panoptic.com>

	* nsd/connio.c: If nsend == 0, we would never call Ns_WriteConn to
	  flush the queued headers.  This could happen when we're sending
	  zero bytes of data as a response.  This fixes bug #971016 in the
	  case where fastpath.cache=false and fastpath.mmap=false and a
	  zero byte file is requested.

2004-06-14 20:25  Dossy Shiobara <dossy@panoptic.com>

	* nsd/return.c: unnecessary test for data != NULL actually caused
	  part of bug #971016 when fastpath.cache=false and
	  fastpath.mmap=true and the file requested is zero bytes, mmap()
	  returns 0 which gets passed along as data == NULL, causing
	  ReturnCharData() to not flush the queued headers.  removing the
	  if is safe as Ns_WriteConn will simply flush any queued data

2004-06-08  Rob Crittenden <rcrittenden0569@aol.com>
